@@ -21,12 +21,24 @@
 
 
    Grammar and command syntax below. All commands are uppercase, while
-   variables are lowercase with non-leading digits.
+   variables are lowercase with non-leading digits. Lines starting
+   with '#' are comments and ignored.
 
    integer  := 0|-?[1-9][0-9]*
    variable := [a-z][a-z0-9]*
    value    := <integer> | <variable>
-   string   := .*
+   string   := ".*"
+
+      Within a string, the backslash acts as escape character for the
+      following expressions:
+
+      * \[0-7]{1,3} denotes an octal escape for a character
+      * \n, \t, \r, \b denote linefeed, tab, carriage return and backspace
+      * \" and \\ denote " and \
+      * an escaped newline is ignored (line continuation)
+
+      A backslash preceding any other character is treated as a
+      literal backslash.
 
    command  :=
 
@@ -70,6 +82,7 @@
 #include <map>
 #include <ctype.h>
 #include <getopt.h>
+#include <stdarg.h>
 #include <boost/regex.hpp>
 
 #include "parser.h"
@@ -79,9 +92,11 @@ using namespace std;
 #define PROGRAM "checktestdata"
 #define AUTHORS "Jan Kuipers, Jaap Eldering"
 
-const int DISPLAYONERROR = 50;
+const int display_before_error = 65;
+const int display_after_error  = 10;
 
 size_t prognr, datanr, linenr, charnr;
+command currcmd;
 
 string data;
 vector<command> program;
@@ -91,13 +106,15 @@ char *progname;
 char *progfile;
 char *datafile;
 
+int debugging;
 int show_help;
 int show_version;
 
 struct option const long_opts[] = {
-        {"help",    no_argument,       &show_help,    1 },
-        {"version", no_argument,       &show_version, 1 },
-        { NULL,     0,                 NULL,          0 }
+	{"debug",   no_argument,       NULL,         'd'},
+	{"help",    no_argument,       &show_help,    1 },
+	{"version", no_argument,       &show_version, 1 },
+	{ NULL,     0,                 NULL,          0 }
 };
 
 void version()
@@ -120,6 +137,26 @@ void usage()
 "\n",progname);
 }
 
+void debug(const char *format, ...)
+{
+	va_list ap;
+	va_start(ap,format);
+
+	if ( debugging ) {
+		fprintf(stderr,"debug: ");
+
+        if ( format!=NULL ) {
+			vfprintf(stderr,format,ap);
+        } else {
+			fprintf(stderr,"<no debug data?>");
+        }
+
+		fprintf(stderr,"\n");
+	}
+
+	va_end(ap);
+}
+
 void readprogram(const char *filename)
 {
 	ifstream in(filename);
@@ -130,6 +167,9 @@ void readprogram(const char *filename)
 		exit(1);
 	}
 
+	debug("parsing script...");
+
+	Parser parseprog(in);
 	if ( parseprog.parse()!=0 ) {
 		cerr << "parse error reading " << filename << endl;
 		exit(1);
@@ -171,6 +211,8 @@ void readtestdata(const char *filename)
 		exit(1);
 	}
 
+	debug("reading testdata...");
+
  	data = ss.str();
 
 	in.close();
@@ -178,19 +220,19 @@ void readtestdata(const char *filename)
 
 void error()
 {
-	size_t to = datanr; while ( to>data.size() ) to--;
-	size_t fr = max(0,int(to-DISPLAYONERROR));
+	size_t fr = max(0,int(datanr)-display_before_error);
+	size_t to = min(data.size(),datanr+display_after_error);
+
+	debug("error at datanr = %d, %d - %d\n",(int)datanr,(int)fr,(int)to);
 
 	cout << data.substr(fr,to-fr) << endl;
-	cout << string(charnr,' ') << "^" << endl << endl;
+	cout << string(min(charnr,(size_t)display_before_error),' ') << "^" << endl << endl;
 
 	cout << "ERROR: line " << linenr << " character " << charnr;
-	cout << " of testdata doesn't match " << program[prognr] << endl << endl;
+	cout << " of testdata doesn't match " << currcmd << endl << endl;
 
 	exit(1);
 }
-
-bool my_xor(bool a, bool b) { return (a && !b) || (!a && b); }
 
 bool smaller(string a, string b)
 {
@@ -220,9 +262,10 @@ bool smaller(string a, string b)
 
 	if ( sign==0 ) return false;
 	if ( a.size()!=b.size() ) {
-		return my_xor(a.size() < b.size(),sign < 0);
+		return ((a.size()<b.size() && sign > 0) ||
+		        (a.size()>b.size() && sign < 0));
 	} else {
-		return my_xor(a<b,sign < 0);
+		return (a<b && sign > 0) || (b<a && sign < 0);
 	}
 }
 
@@ -239,6 +282,9 @@ string value(string x)
 
 void checktoken(command cmd)
 {
+	currcmd = cmd;
+	debug("checking token %s at %d,%d",cmd.name().c_str(),linenr,charnr);
+
 	if ( cmd.name()=="SPACE" ) {
 		if ( datanr>=data.size() || data[datanr++]!=' ' ) error();
 		charnr++;
@@ -254,12 +300,16 @@ void checktoken(command cmd)
 		// Accepts format (0|-?[1-9][0-9]*), i.e. no leading zero's
 		// and no '-0' accepted.
 		string num;
+		size_t len = 0;
 		while ( datanr<data.size() &&
-		        (isdigit(data[datanr]) ||
-		         (num.size()==0 && data[datanr]=='-')) ) {
-			num += data[datanr++];
-			charnr++;
+		        (isdigit(data[datanr+len]) ||
+		         (num.size()==0 && data[datanr+len]=='-')) ) {
+			num += data[datanr+len];
+			len++;
 		}
+
+		debug("%s <= %s <= %s",cmd.args[0].c_str(),num.c_str(),cmd.args[1].c_str());
+		if ( cmd.nargs()>=3 ) debug("'%s' = '%s'",cmd.args[2].c_str(),num.c_str());
 
 		if ( num.size()==0 ) error();
 		if ( num.size()>=2 && num[0]=='0' ) error();
@@ -269,6 +319,9 @@ void checktoken(command cmd)
 		if ( cmd.nargs()>=1 && smaller(num,value(cmd.args[0])) ) error();
 		if ( cmd.nargs()>=2 && smaller(value(cmd.args[1]),num) ) error();
 		if ( cmd.nargs()>=3 ) variable[cmd.args[2]] = num;
+
+		datanr += len;
+		charnr += len;
 	}
 
 	else if ( cmd.name()=="STRING" ) {
@@ -278,23 +331,30 @@ void checktoken(command cmd)
 			charnr++;
 			if ( str[i]=='\n' ) linenr++, charnr=0;
 		}
+
+		debug("'%s' = '%s'",str.c_str(),cmd.args[0].c_str());
 	}
 
 	else if ( cmd.name()=="REGEX" ) {
 		boost::regex regexstr(string(cmd.args[0]));
 		boost::match_results<string::const_iterator> res;
 		boost::match_flag_type flags = boost::match_default | boost::match_continuous;
+		string matchstr;
 
 		if ( !boost::regex_search((string::const_iterator)&data[datanr],
 		                          (string::const_iterator)data.end(),
 								  res,regexstr,flags) ) {
 			error();
 		} else {
-			for (; datanr<size_t(res[0].second-data.begin()); datanr++) {
+			size_t matchend = size_t(res[0].second-data.begin());
+			matchstr = string(data.begin()+datanr,data.begin()+matchend);
+			for (; datanr<matchend; datanr++) {
 				charnr++;
 				if ( data[datanr]=='\n' ) linenr++, charnr=0;
 			}
 		}
+
+		debug("'%s' = '%s'",matchstr.c_str(),cmd.args[0].c_str());
 	}
 
 	else {
@@ -305,7 +365,7 @@ void checktoken(command cmd)
 void checktestdata()
 {
 	while ( true ) {
-		command cmd = program[prognr];
+		command cmd = currcmd = program[prognr];
 
 		if ( cmd.name()=="EOF" ) {
 			if ( datanr++!=data.size() ) error();
@@ -328,6 +388,7 @@ void checktestdata()
 				int loopstart = prognr+1;
 
 				while ( times-- ) {
+					debug("REP times = %lld",times+1);
 					prognr = loopstart;
 					checktestdata();
 					if ( times && cmd.nargs()>=2 ) checktoken(cmd.args[1]);
@@ -354,11 +415,14 @@ int main(int argc, char **argv)
 	progname = argv[0];
 
 	/* Parse command-line options */
-	show_help = show_version = 0;
+	debugging = show_help = show_version = 0;
 	opterr = 0;
-	while ( (opt = getopt_long(argc,argv,"+",long_opts,(int *) 0))!=-1 ) {
+	while ( (opt = getopt_long(argc,argv,"+d",long_opts,(int *) 0))!=-1 ) {
 		switch ( opt ) {
 		case 0:   /* long-only option */
+			break;
+		case 'd':
+			debugging = 1;
 			break;
 		case ':': /* getopt error */
 		case '?':
@@ -386,6 +450,8 @@ int main(int argc, char **argv)
 		return 1;
 	}
 	datafile = argv[optind+1];
+
+	debug("debugging enabled");
 
 	readprogram(progfile);
 	readtestdata(datafile);
