@@ -1,0 +1,6 @@
+INT(-1000000001,1000000000423423423423423423) NEWLINE
+INT(-1000000000,-1000000000) NEWLINE
+INT(-999999999,-999999999) NEWLINE
+INT(999999999,1999999993132143343439) NEWLINE
+INT(-999999999,1000000000) NEWLINE
+INT(1000000001,1000000001) NEWLINE
